# xauusd-trader

./: .env.example  .gitignore  pyproject.toml
artifacts/reports/unsup_champion_eval/20260527_034751/: unsup_champion_report.json
artifacts/trader/: combined_trader_artifact.json  combined_trader_artifact_unsup_eval_20260527_034757.json  combined_trader_artifact_unsup_eval_20260530_232135.json  combined_trader_artifact_unsup_eval_20260530_233502.json
config/: runtime.yaml
config/accounts/: demo.yaml  live.yaml
docs/: IMPLEMENTATION_PLAN.md  OPERATIONS.md  README.md  README_MT5_PYTHON_XAUUSD.md  xauusd_trader.md
scripts/: run_demo.cmd  run_live.cmd  sync_artifact_from_bot.ps1
src/xau_trader/: config.py  execution.py  features.py  main.py  market_data.py  mt5_client.py  reason_codes.py  reporting.py  risk.py  runner.py  safeguards.py  state_store.py  strategy_adapter.py  types.py  validate_artifact.py
tests/: test_risk_and_safeguards.py
