[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "xauusd-trader"
version = "0.1.0"
description = "XAUUSD MT5 execution trader (demo/live unified)"
readme = "docs/README.md"
requires-python = ">=3.11"
dependencies = [
  "MetaTrader5>=5.0.45",
  "numpy>=1.26.0",
  "pydantic>=2.7.0",
  "PyYAML>=6.0.1",
  "python-dotenv>=1.0.1",
  "typing-extensions>=4.12.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2.0",
  "ruff>=0.5.0",
  "mypy>=1.10.0",
]

[project.scripts]
xau-trader = "xau_trader.main:cli"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
